# MFixedPoint

./: .cproject  .gitignore  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cpp-FixedPoint.cppcheck  LICENSE.txt  Makefile  README.md  README.rst  doxygen.conf
api/: MFixedPointApi.hpp
benchmark/: CMakeLists.txt  FpBench-Main.cpp  FpBenchmark.out  SoftFloat.hpp  main.cpp
docs/: Config_8hpp.html  Config_8hpp.js  Config_8hpp__dep__incl.map  Config_8hpp__dep__incl.md5  Config_8hpp_source.html  Fp32f_8cpp.html  Fp32f_8cpp.js  Fp32f_8cpp__incl.map  Fp32f_8cpp__incl.md5  Fp32f_8cpp_source.html  Fp32f_8hpp.html  Fp32f_8hpp.js  Fp32f_8hpp__dep__incl.map  Fp32f_8hpp__dep__incl.md5  Fp32f_8hpp__incl.map  Fp32f_8hpp__incl.md5  Fp32f_8hpp_source.html  Fp32s_8hpp.html  Fp32s_8hpp__incl.map  Fp32s_8hpp__incl.md5  Fp32s_8hpp_source.html  Fp64f_8hpp.html  Fp64f_8hpp.js  Fp64f_8hpp__incl.map  Fp64f_8hpp__incl.md5  Fp64f_8hpp_source.html  Fp64s_8hpp.html  Fp64s_8hpp__incl.map  Fp64s_8hpp__incl.md5  Fp64s_8hpp_source.html  MainPage_8dox.html  Port_8cpp.html  Port_8cpp__incl.map  Port_8cpp__incl.md5  Port_8cpp_source.html  Port_8hpp.html  Port_8hpp__dep__incl.map  Port_8hpp__dep__incl.md5  Port_8hpp__incl.map  Port_8hpp__incl.md5  (+112 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  groups_0.js  groups_2.js  groups_3.js  groups_4.js  namespaces_0.js  pages_0.js  searchdata.js  variables_1.js
example/: CMakeLists.txt  ReadmeExample.cpp
include/: Config.hpp  Fp32f.hpp  Fp32s.hpp  Fp64f.hpp  Fp64s.hpp  Port.hpp
include/MFixedPoint/: Fp32f.hpp  Fp64f.hpp  Fp64s.hpp  FpF.hpp  FpS.hpp  Fpf.hpp  Port.hpp
old/: Config.hpp  Fp32f.cpp  Fp32s.hpp  Fp64f.hpp
src/: CMakeLists.txt  FixedPoint-Fp32.cpp  FixedPoint-Fp32f.cpp  FixedPoint-Port.cpp  Fp-Port.cpp  Fp.cpp  Fp.h  Fp32f.cpp  MainPage.dox  Port.cpp
src/include/: FixedPoint-Config.hpp  FixedPoint-Fp32.hpp  FixedPoint-Fp32Q.hpp  FixedPoint-Fp32f.hpp  FixedPoint-Fp32s.hpp  FixedPoint-Fp64.hpp  FixedPoint-Fp64f.hpp  FixedPoint-Fp64s.hpp  FixedPoint-Port.hpp  Fp-Config.hpp  Fp-Port.hpp  Fp.h  Fp.hpp  Fp32.hpp  Fp64.hpp
test/: CMakeLists.txt  Fp32Test.cpp  Fp32fArithmetic.cpp  Fp32fBinary.cpp  Fp32fCompoundArithmetic.cpp  Fp32fSize.cpp  Fp32fSpeed.cpp  Fp32fTypeConversion.cpp  Fp32sArithmetic.cpp  Fp32sBinary.cpp  Fp32sCompoundArithmetic.cpp  Fp32sDifferentQArithmetic.cpp  Fp32sTypeConversion.cpp  Fp64fBinary.cpp  Fp64fCompoundArithmetic.cpp  Fp64fSize.cpp  Fp64fSpeed.cpp  Fp64fTypeConversion.cpp  Fp64sArithmetic.cpp  Fp64sBinary.cpp  Fp64sCompoundArithmetic.cpp  Fp64sDifferentQArithmetic.cpp  Fp64sTypeConversion.cpp  FpTest-Fp32Arithmetic.cpp  FpTest-Fp32Binary.cpp  FpTest-Fp32Casts.cpp  FpTest-Fp32CompoundArithmetic.cpp  FpTest-Fp32Size.cpp  FpTest-Fp32Speed.cpp  FpTest-Fp32Test.cpp  FpTest-Fp32TypeConversion.cpp  FpTest-Fp32fArithmetic.cpp  FpTest-Fp32fBinary.cpp  FpTest-Fp32fCompoundArithmetic.cpp  FpTest-Fp32fSize.cpp  FpTest-Fp32fTypeConversion.cpp  FpTest-Fp32sArithmetic.cpp  FpTest-Fp32sBinary.cpp  FpTest-Fp32sCasts.cpp  FpTest-Fp32sCompoundArithmetic.cpp  (+19 more)
test/FpF/: FpFArithmeticTests.cpp  FpFComparisonOperators.cpp  FpFConversions.cpp  FpFRawValTests.cpp  FpFStringAndStream.cpp  FpFTests.cpp  FpFWithFpFArithmeticTests.cpp  FpFWithIntegerArithmeticTests.cpp
test/FpS/: FpSArithmetic.cpp  FpSArithmeticDiffFracBitsTests.cpp  FpSArithmeticTests.cpp  FpSComparisonTests.cpp  FpSCompoundArithmetic.cpp  FpSConstructors.cpp  FpSConversions.cpp  FpSMisc.cpp  FpSStringAndStream.cpp  FpSTests.cpp
test/Fpf/: Fpf.cpp
test/UnitTest++/: TestUnitTest++
test/UnitTest++/src/: AssertException.d  Checks.d  CurrentTest.d  DeferredTestReporter.d  DeferredTestResult.d  MemoryOutStream.d  ReportAssert.d  Test.d  TestList.d  TestReporterStdout.d  TestResults.d  TestRunner.d  TimeConstraint.d  XmlTestReporter.d
test/UnitTest++/src/Posix/: SignalTranslator.d  TimeHelpers.d
test/UnitTest++/src/tests/: Main.d  TestAssertHandler.d  TestCheckMacros.d  TestChecks.d  TestCurrentTest.d  TestDeferredTestReporter.d  TestMemoryOutStream.d  TestTest.d  TestTestList.d  TestTestMacros.d  TestTestResults.d  TestTestRunner.d  TestTimeConstraint.d  TestTimeConstraintMacro.d  TestUnitTest++.d  TestXmlTestReporter.d
tools/: build.sh
